create tidydata_project folder and relevant files

--- a/Computing II/Class Assingments/Week 7/EoC2_Week_7_1_(2_25)_IN-CLASS.ipynb
+++ b/Computing II/Class Assingments/Week 7/EoC2_Week_7_1_(2_25)_IN-CLASS.ipynb
@@ -15,15 +15,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "6Pzda7X7Bp0s"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treat for Dec 1: Candy\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a simple list (dynamic array) in Python\n",
+    "advent_calendar = [\"Candy\", \"Cookie\", \"Chocolate\", \"Gum\", \"Lollipop\"]\n",
     "\n",
-    "# Accessing an element using zero-based indexing\n"
+    "# Accessing an element using zero-based indexing\n",
+    "print(\"Treat for Dec 1:\", advent_calendar[0])"
    ]
   },
   {
@@ -85,17 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "p2LezO0SGoaU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 7, 1]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nums = [1,2,3,4,5,6,7]\n",
     "\n",
     "#normalize k\n",
     "n = len(nums)\n",
-    "k = 3\n",
+    "k = 1000\n",
     "\n",
     "k%=n\n",
     "\n",
@@ -106,7 +127,10 @@
     "k_rev=rev_nums[:k][::-1]\n",
     "\n",
     "#Reverse remining elements\n",
-    "rev_nums[k:][::-1]"
+    "rem_rev=rev_nums[k:][::-1]\n",
+    "\n",
+    "#Combine\n",
+    "k_rev + rem_rev"
    ]
   },
   {
@@ -134,16 +158,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "ueyVG2yVK9GY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['google.com', 'wikipedia.org']\n",
+      "['google.com']\n"
+     ]
+    }
+   ],
    "source": [
     "# Building a \"BrowserHistory\" class that returns the previously stored url\n",
+    "class BrowserHistory:\n",
+    "    def __init__(self):\n",
+    "        self.history = []\n",
     "\n",
+    "    def visit_page(self, url): #every method starts with self, URL link is appended to the list\n",
+    "        \"\"\"Simulate visiting a webpage by pushing the URL onto the history stack.\"\"\" \n",
+    "        self.history.append(url) #we are adding to the stack \n",
+    "    \n",
+    "    def go_back(self):\n",
+    "        \"\"\"Simulate the 'Back' button by popping the last visited URL.\"\"\"\n",
+    "        if self.history:\n",
+    "            return self.history.pop() #LIFO method \n",
+    "        return \"No history available\" \n",
+    "    \n",
+    "# Demonstration of the stack behavior:\n",
+    "#This uses O(1) time compelxity\n",
+    "history = BrowserHistory()\n",
+    "history.visit_page(\"google.com\") #first link would be google\n",
+    "history.visit_page(\"wikipedia.org\") #second link would be wikipedia \n",
+    "print(history.history)\n",
+    "undo_1= history.go_back() #Wikipedia\n",
+    "print(history.history)\n",
+    "undo_2 = history.go_back() #Google\n",
     "\n",
-    "# Demonstration of the stack behavior:\n"
+    "#Use print(history.history) to see what urls are in the list until now\n",
+    "#Use history.go_back to see the lats visited website"
    ]
   },
   {
@@ -183,12 +239,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "pdCBhO4MMJgj"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['m', 'a', 'd', 'a', 'm']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_obj = 'Madam'\n",
+    "\n",
+    "#Normalize teh stirng\n",
+    "string_obj=string_obj.lower() #Will make everything lowercase\n",
+    "\n",
+    "#Step 1: Create an empty stack and push each character onto it\n",
+    "chr_stack=[]\n",
+    "for char in string_obj:\n",
+    "    chr_stack.append(char)\n",
+    "chr_stack\n",
+    "\n",
+    "# Step 2: Build a reverse string by poping all of the elements from the stack\n",
+    "reversed_str = []\n",
+    "while chr_stack:\n",
+    "    reversed_str += chr_stack.pop()\n",
+    "print(reversed_str)\n",
+    "\n",
+    "# Step 3: \n",
+    "string_obj == reversed_str"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,11 +415,21 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
