Adding Markdown Comments

--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -355,6 +355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 3: Clean Data Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -450,6 +457,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 4: Investigate the Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -533,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +565,7 @@
     "medalists = olympics_tidy['Medal'].shape[0]\n",
     "print(f'There are {medalists} Medalist in the Data Set')\n",
     "\n",
-    "#Count number of Evnts\n",
+    "#Count number of Events\n",
     "Events = olympics_tidy['event'].nunique()\n",
     "print(f'There where {Events} differnet sports in the 2008 Olympic Games')\n",
     "\n",
