--- a/Computing II/Class Assingments/SQL in class/Week 8/EoC Week 8_1_FINAL.ipynb
+++ b/Computing II/Class Assingments/SQL in class/Week 8/EoC Week 8_1_FINAL.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,26 +57,9 @@
      "output_type": "stream",
      "text": [
       "Tables in the database:\n",
-      "               name\n",
-      "0             actor\n",
-      "1           country\n",
-      "2              city\n",
-      "3           address\n",
-      "4          language\n",
-      "5          category\n",
-      "6          customer\n",
-      "7              film\n",
-      "8        film_actor\n",
-      "9     film_category\n",
-      "10        film_text\n",
-      "11        inventory\n",
-      "12            staff\n",
-      "13            store\n",
-      "14          payment\n",
-      "15           rental\n",
-      "16        customers\n",
-      "17  sqlite_sequence\n",
-      "18       test_table\n"
+      "Empty DataFrame\n",
+      "Columns: [name]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -101,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,16 +93,9 @@
      "text": [
       "\n",
       "Customer Table Columns:\n",
-      "          name\n",
-      "0  customer_id\n",
-      "1     store_id\n",
-      "2   first_name\n",
-      "3    last_name\n",
-      "4        email\n",
-      "5   address_id\n",
-      "6       active\n",
-      "7  create_date\n",
-      "8  last_update\n"
+      "Empty DataFrame\n",
+      "Columns: [name]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -526,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
