--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -792,12 +792,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Pivot Table"
+    "## Step 5: Pivot Tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Pivot Table (Percentage Medal Breakdown by Event):\n",
+      "Medal                  gold  silver  bronze\n",
+      "event                                      \n",
+      "archery                25.0    35.0    40.0\n",
+      "artistic gymnastics    28.6    32.7    38.8\n",
+      "association football   33.9    33.0    33.0\n",
+      "athletics              31.3    35.5    33.1\n",
+      "badminton              31.8    36.4    31.8\n",
+      "baseball               33.3    33.3    33.3\n",
+      "basketball             32.4    33.8    33.8\n",
+      "beach volleyball       33.3    33.3    33.3\n",
+      "bmx                    33.3    33.3    33.3\n",
+      "boxing                 25.0    25.0    50.0\n",
+      "canoeing and kayaking  32.4    31.1    36.5\n",
+      "diving                 24.1    37.9    37.9\n",
+      "equestrian sport       28.9    34.2    36.8\n",
+      "fencing                33.3    38.9    27.8\n",
+      "field hockey           33.7    32.7    33.7\n",
+      "freestyle wrestling    25.0    25.0    50.0\n",
+      "greco-roman wrestling  25.9    25.9    48.1\n",
+      "handball               34.1    32.9    32.9\n",
+      "judo                   25.0    25.0    50.0\n",
+      "modern pentathlon      40.0    40.0    20.0\n",
+      "mountain biking        33.3    33.3    33.3\n",
+      "rhythmic gymnastics    33.3    33.3    33.3\n",
+      "road bicycle racing    27.3    36.4    36.4\n",
+      "rowing                 34.0    34.0    31.9\n",
+      "sailing                33.3    33.3    33.3\n",
+      "shooting sport         32.6    32.6    34.9\n",
+      "softball               33.3    33.3    33.3\n",
+      "swimming               31.2    34.4    34.4\n",
+      "synchronized swimming  31.0    31.0    37.9\n",
+      "table tennis           11.1    44.4    44.4\n",
+      "taekwondo              25.0    25.0    50.0\n",
+      "tennis                 33.3    33.3    33.3\n",
+      "track cycling          25.0    38.6    36.4\n",
+      "trampoline gymnastics  33.3    33.3    33.3\n",
+      "triathlon              33.3    33.3    33.3\n",
+      "volleyball             33.3    33.3    33.3\n",
+      "water polo             33.3    33.3    33.3\n",
+      "weightlifting          33.3    33.3    33.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/1842318359.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+      "  pivot_table_event= pd.pivot_table(olympics_tidy, values='medalist_name',\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Gender and event as index, medals as values\n",
+    "pivot_table_event= pd.pivot_table(olympics_tidy, values='medalist_name',\n",
+    "                                    index='event', columns='Medal', aggfunc='count')\n",
+    "\n",
+    "# Convert to percentages by summing medals across columns (axis=1) to get total medals per event,  \n",
+    "# then divide each medal count by its gevents total (axis=0) to normalize rows to 100%\n",
+    "pivot_table_event= round((pivot_table_event.div(pivot_table_event.sum(axis=1), axis=0)) * 100,1)\n",
+    "\n",
+    "# Print Pivot Table\n",
+    "print(\"\\nPivot Table (Percentage Medal Breakdown by Event):\")\n",
+    "print(pivot_table_event)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This pivot table shows the percentage distribution of gold, silver, and bronze medals in different Olympic events. Common patterns include equal distribution (33.3% each), unequal distribution, and 25-25-50 splits, which may indicate different competition formats and can be further investigated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Pivot Table (Equal Medal Distribution Events):\n",
+      "Medal                  gold  silver  bronze\n",
+      "event                                      \n",
+      "baseball               33.3    33.3    33.3\n",
+      "beach volleyball       33.3    33.3    33.3\n",
+      "bmx                    33.3    33.3    33.3\n",
+      "mountain biking        33.3    33.3    33.3\n",
+      "rhythmic gymnastics    33.3    33.3    33.3\n",
+      "sailing                33.3    33.3    33.3\n",
+      "softball               33.3    33.3    33.3\n",
+      "tennis                 33.3    33.3    33.3\n",
+      "trampoline gymnastics  33.3    33.3    33.3\n",
+      "triathlon              33.3    33.3    33.3\n",
+      "volleyball             33.3    33.3    33.3\n",
+      "water polo             33.3    33.3    33.3\n",
+      "weightlifting          33.3    33.3    33.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create masks for filtering with all the rows with equal proportions of each medal \n",
+    "mask_equal = (pivot_table_event['gold'] == 33.3) & (pivot_table_event['silver'] == 33.3) & (pivot_table_event['bronze'] == 33.3)\n",
+    "\n",
+    "# Apply mask to only display cases where there was equal distribution\n",
+    "equal_distribution = pivot_table_event[mask_equal]   # Rows where all values are 33.3%\n",
+    "\n",
+    "# Print Pivot Table\n",
+    "print(\"\\nPivot Table (Equal Medal Distribution Events):\")\n",
+    "print(equal_distribution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Pivot Table (25 - 25 - 50 Medal Distribution Events):\n",
+      "Medal                gold  silver  bronze\n",
+      "event                                    \n",
+      "boxing               25.0    25.0    50.0\n",
+      "freestyle wrestling  25.0    25.0    50.0\n",
+      "judo                 25.0    25.0    50.0\n",
+      "taekwondo            25.0    25.0    50.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create masks for filtering with all the rows with 25 - 25 - 50 Distribution\n",
+    "mask_two_bronze = (pivot_table_event['gold'] == 25.0) & (pivot_table_event['silver'] == 25.0) & (pivot_table_event['bronze'] == 50.0)\n",
+    "\n",
+    "# Apply mask to only display cases with 25 - 25 - 50 Distribution\n",
+    "two_bronze = pivot_table_event[mask_two_bronze]   # Rows where bronze is 50% and silver & gold are 25% each\n",
+    "\n",
+    "# Print Pivot Table\n",
+    "print(\"\\nPivot Table (25 - 25 - 50 Medal Distribution Events):\")\n",
+    "print(two_bronze)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -881,43 +1037,6 @@
     "#Gender and event as index, medals as values\n",
     "pivot_table_gender= pd.pivot_table(olympics_tidy, values='gender',\n",
     "                                    index='event', columns='Medal', aggfunc='count')\n",
-    "print(pivot_table_gender)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Medal   gold  silver  bronze\n",
-      "gender                      \n",
-      "female  32.1    33.0    34.9\n",
-      "male    30.5    33.2    36.2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/2299723119.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
-      "  pivot_table_gender= pd.pivot_table(olympics_tidy, values='event',\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Gender and event as index, medals as values\n",
-    "pivot_table_gender= pd.pivot_table(olympics_tidy, values='event',\n",
-    "                                    index='gender', columns='Medal', aggfunc='count')\n",
-    "\n",
-    "# Convert to percentages by summing medals across columns (axis=1) to get total medals per gender,  \n",
-    "# then divide each medal count by its gender's total (axis=0) to normalize rows to 100%\n",
-    "pivot_table_gender = round((pivot_table_gender.div(pivot_table_gender.sum(axis=1), axis=0)) * 100,1)\n",
-    "\n",
-    "# Display the table\n",
     "print(pivot_table_gender)"
    ]
   }
