add markdown comments

--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Pivot Table (Percentage Medal Breakdown by Event):\n",
+      "Pivot Table (Percentage Medal Breakdown by Event(%)):\n",
       "Medal                  gold  silver  bronze\n",
       "event                                      \n",
       "archery                25.0    35.0    40.0\n",
@@ -852,7 +852,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/1842318359.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/549945129.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
       "  pivot_table_event= pd.pivot_table(olympics_tidy, values='medalist_name',\n"
      ]
     }
@@ -867,7 +867,7 @@
     "pivot_table_event= round((pivot_table_event.div(pivot_table_event.sum(axis=1), axis=0)) * 100,1)\n",
     "\n",
     "# Print Pivot Table\n",
-    "print(\"\\nPivot Table (Percentage Medal Breakdown by Event):\")\n",
+    "print(\"\\nPivot Table (Percentage Medal Breakdown by Event(%)):\")\n",
     "print(pivot_table_event)"
    ]
   },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Pivot Table (Equal Medal Distribution Events):\n",
+      "Pivot Table (Equal Medal Distribution Events(%)):\n",
       "Medal                  gold  silver  bronze\n",
       "event                                      \n",
       "baseball               33.3    33.3    33.3\n",
@@ -915,13 +915,20 @@
     "equal_distribution = pivot_table_event[mask_equal]   # Rows where all values are 33.3%\n",
     "\n",
     "# Print Pivot Table\n",
-    "print(\"\\nPivot Table (Equal Medal Distribution Events):\")\n",
+    "print(\"\\nPivot Table (Equal Medal Distribution Events(%)):\")\n",
     "print(equal_distribution)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These events have a perfectly equal distribution of gold, silver, and bronze medals (33.3% each). This suggests that no additional medals were awarded due to ties or unique competition formats. Observing the nature of the events in this pivot table, it likely reflects competition formats where exactly one gold, silver, and bronze medal were awarded per event. This pattern is common in events with a fixed podium structure, such as team sports or races with clear first, second, and third-place."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +936,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Pivot Table (25 - 25 - 50 Medal Distribution Events):\n",
+      "Pivot Table (25 - 25 - 50 Medal Distribution Events(%)):\n",
       "Medal                gold  silver  bronze\n",
       "event                                    \n",
       "boxing               25.0    25.0    50.0\n",
@@ -947,13 +954,20 @@
     "two_bronze = pivot_table_event[mask_two_bronze]   # Rows where bronze is 50% and silver & gold are 25% each\n",
     "\n",
     "# Print Pivot Table\n",
-    "print(\"\\nPivot Table (25 - 25 - 50 Medal Distribution Events):\")\n",
+    "print(\"\\nPivot Table (25 - 25 - 50 Medal Distribution Events(%)):\")\n",
     "print(two_bronze)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This table shows events where bronze medals make up 50% of the total medals awarded, while gold and silver each account for 25%. This pattern is common in combat sports because two bronze medals are awarded per event instead of one. This setup dates back to 1950 when the International Boxing Association (AIBA) eliminated the bronze medal match due to concerns over boxer safety, ensuring that both losing semifinalists receive bronze instead of competing in an additional fight. (https://www.nbcbayarea.com/paris-2024-summer-olympics/two-bronze-medals-explained-olympics/3617259/)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
