updated refrence to pandas cheat sheet and tidy data principles

--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -270,7 +270,7 @@
    "metadata": {},
    "source": [
     " ## Step 3: Melting the Data\n",
-    " To address the sparsity, the data must be converted from a wide format to a long format using the pd.melt() function. Instead of having separate columns for each event and gender, we transformed the data so each row represents an athlete, their gender, a specific event, and the medal they won. This restructuring reduces the number of empty cells, making it easier to analyze trends, count medals, and filter by event or gender. "
+    " To address the sparsity, the data must be converted from a wide format to a long format using the pd.melt() function. Instead of having separate columns for each event and gender, we transformed the data so each row represents an athlete, their gender, a specific event, and the medal they won. This restructuring reduces the number of empty cells, making it easier to analyze trends, count medals, and filter by event or gender. According to the pandas cheat sheet this makes the data tidy as it stores each variable in its own column and each observation in its own row."
    ]
   },
   {
@@ -366,7 +366,7 @@
    "metadata": {},
    "source": [
     "## Step 4: Clean Dataset\n",
-    "Even after restructuring the dataset, we still have many NaN values. This is because, initially, each row represented an athlete with multiple event columns, many of which they did not compete in. The data is refiend by separating the gender_event column into distinct gender and event columns.Additionally, we filter out rows where Medal is NaN, not because we are filtering out non-medalists (since everyone in the dataset won a medal), but to remove cases where an athlete simply did not compete in a particular event."
+    "Even after restructuring the dataset, we still have many NaN values. This is because, initially, each row represented an athlete with multiple event columns, many of which they did not compete in. The data is refiend by separating the gender_event column into distinct gender and event columns.  Additionally, we filter out rows where Medal is NaN, not because we are filtering out non-medalists (since everyone in the dataset won a medal), but to remove cases where an athlete simply did not compete in a particular event. This assumption is allowed according to the Tidy Data principles article (pg. 9)  "
    ]
   },
   {
@@ -797,63 +797,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Pivot Table (Percentage Medal Breakdown by Event(%)):\n",
-      "Medal                  gold  silver  bronze\n",
-      "event                                      \n",
-      "archery                25.0    35.0    40.0\n",
-      "artistic gymnastics    28.6    32.7    38.8\n",
-      "association football   33.9    33.0    33.0\n",
-      "athletics              31.3    35.5    33.1\n",
-      "badminton              31.8    36.4    31.8\n",
-      "baseball               33.3    33.3    33.3\n",
-      "basketball             32.4    33.8    33.8\n",
-      "beach volleyball       33.3    33.3    33.3\n",
-      "bmx                    33.3    33.3    33.3\n",
-      "boxing                 25.0    25.0    50.0\n",
-      "canoeing and kayaking  32.4    31.1    36.5\n",
-      "diving                 24.1    37.9    37.9\n",
-      "equestrian sport       28.9    34.2    36.8\n",
-      "fencing                33.3    38.9    27.8\n",
-      "field hockey           33.7    32.7    33.7\n",
-      "freestyle wrestling    25.0    25.0    50.0\n",
-      "greco-roman wrestling  25.9    25.9    48.1\n",
-      "handball               34.1    32.9    32.9\n",
-      "judo                   25.0    25.0    50.0\n",
-      "modern pentathlon      40.0    40.0    20.0\n",
-      "mountain biking        33.3    33.3    33.3\n",
-      "rhythmic gymnastics    33.3    33.3    33.3\n",
-      "road bicycle racing    27.3    36.4    36.4\n",
-      "rowing                 34.0    34.0    31.9\n",
-      "sailing                33.3    33.3    33.3\n",
-      "shooting sport         32.6    32.6    34.9\n",
-      "softball               33.3    33.3    33.3\n",
-      "swimming               31.2    34.4    34.4\n",
-      "synchronized swimming  31.0    31.0    37.9\n",
-      "table tennis           11.1    44.4    44.4\n",
-      "taekwondo              25.0    25.0    50.0\n",
-      "tennis                 33.3    33.3    33.3\n",
-      "track cycling          25.0    38.6    36.4\n",
-      "trampoline gymnastics  33.3    33.3    33.3\n",
-      "triathlon              33.3    33.3    33.3\n",
-      "volleyball             33.3    33.3    33.3\n",
-      "water polo             33.3    33.3    33.3\n",
-      "weightlifting          33.3    33.3    33.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/549945129.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
-      "  pivot_table_event= pd.pivot_table(olympics_tidy, values='medalist_name',\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Gender and event as index, medals as values\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m pivot_table_event\u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mpivot_table(olympics_tidy, values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedalist_name\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m                                     index\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mevent\u001b[39m\u001b[38;5;124m'\u001b[39m, columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMedal\u001b[39m\u001b[38;5;124m'\u001b[39m, aggfunc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcount\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Convert to percentages by summing medals across columns (axis=1) to get total medals per event,  \u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# then divide each medal count by its gevents total (axis=0) to normalize rows to 100%\u001b[39;00m\n\u001b[1;32m      7\u001b[0m pivot_table_event\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m((pivot_table_event\u001b[38;5;241m.\u001b[39mdiv(pivot_table_event\u001b[38;5;241m.\u001b[39msum(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -923,7 +878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These events have a perfectly equal distribution of gold, silver, and bronze medals (33.3% each). This suggests that no additional medals were awarded due to ties or unique competition formats. Observing the nature of the events in this pivot table, it likely reflects competition formats where exactly one gold, silver, and bronze medal were awarded per event. This pattern is common in events with a fixed podium structure, such as team sports or races with clear first, second, and third-place."
+    "These events have a perfectly equal distribution of gold, silver, and bronze medals (33.3% each). This suggests that no additional medals were awarded due to ties or unique competition formats. Observing the events in this pivot table, it reflects competition formats where exactly one gold, silver, and bronze medal were awarded. This pattern is common in events with a fixed podium structure, such as team sports (where a tie break is conducted until there is an ultimate winner) or races with clear first, second, and third-place."
    ]
   },
   {
@@ -963,95 +918,6 @@
    "metadata": {},
    "source": [
     "This table shows events where bronze medals make up 50% of the total medals awarded, while gold and silver each account for 25%. This pattern is common in combat sports because two bronze medals are awarded per event instead of one. This setup dates back to 1950 when the International Boxing Association (AIBA) eliminated the bronze medal match due to concerns over boxer safety, ensuring that both losing semifinalists receive bronze instead of competing in an additional fight. (https://www.nbcbayarea.com/paris-2024-summer-olympics/two-bronze-medals-explained-olympics/3617259/)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Medal                         bronze  gold  silver\n",
-      "gender event                                      \n",
-      "female archery                   4.0   2.0     3.0\n",
-      "       artistic gymnastics       7.0   7.0     6.0\n",
-      "       association football     18.0  18.0    18.0\n",
-      "       athletics                26.0  27.0    28.0\n",
-      "       badminton                 3.0   3.0     4.0\n",
-      "...                              ...   ...     ...\n",
-      "male   trampoline gymnastics     1.0   1.0     1.0\n",
-      "       triathlon                 1.0   1.0     1.0\n",
-      "       volleyball               12.0  12.0    12.0\n",
-      "       water polo               13.0  13.0    13.0\n",
-      "       weightlifting             8.0   8.0     8.0\n",
-      "\n",
-      "[70 rows x 3 columns]\n",
-      "Medal                  gold  silver  bronze\n",
-      "event                                      \n",
-      "archery                   5       7       8\n",
-      "artistic gymnastics      14      16      19\n",
-      "association football     37      36      36\n",
-      "athletics                52      59      55\n",
-      "badminton                 7       8       7\n",
-      "baseball                 24      24      24\n",
-      "basketball               23      24      24\n",
-      "beach volleyball          4       4       4\n",
-      "bmx                       2       2       2\n",
-      "boxing                   11      11      22\n",
-      "canoeing and kayaking    24      23      27\n",
-      "diving                    7      11      11\n",
-      "equestrian sport         11      13      14\n",
-      "fencing                  18      21      15\n",
-      "field hockey             33      32      33\n",
-      "freestyle wrestling      11      11      22\n",
-      "greco-roman wrestling     7       7      13\n",
-      "handball                 29      28      28\n",
-      "judo                     14      14      28\n",
-      "modern pentathlon         2       2       1\n",
-      "mountain biking           2       2       2\n",
-      "rhythmic gymnastics       7       7       7\n",
-      "road bicycle racing       3       4       4\n",
-      "rowing                   48      48      45\n",
-      "sailing                  18      18      18\n",
-      "shooting sport           14      14      15\n",
-      "softball                 15      15      15\n",
-      "swimming                 39      43      43\n",
-      "synchronized swimming     9       9      11\n",
-      "table tennis              2       8       8\n",
-      "taekwondo                 8       8      16\n",
-      "tennis                    6       6       6\n",
-      "track cycling            11      17      16\n",
-      "trampoline gymnastics     2       2       2\n",
-      "triathlon                 2       2       2\n",
-      "volleyball               24      24      24\n",
-      "water polo               26      26      26\n",
-      "weightlifting            15      15      15\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/2415064134.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
-      "  pivot_table_= pd.pivot_table(olympics_tidy, values='Medal',\n",
-      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/2415064134.py:7: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
-      "  pivot_table_gender= pd.pivot_table(olympics_tidy, values='gender',\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Gender and event as index, medals as values\n",
-    "pivot_table_= pd.pivot_table(olympics_tidy, values='Medal',\n",
-    "                                    index=['gender','event'], columns='Medal', aggfunc='count')\n",
-    "print(pivot_table_medal)\n",
-    "\n",
-    "#Gender and event as index, medals as values\n",
-    "pivot_table_gender= pd.pivot_table(olympics_tidy, values='gender',\n",
-    "                                    index='event', columns='Medal', aggfunc='count')\n",
-    "print(pivot_table_gender)"
    ]
   }
  ],
