--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -17,13 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +254,7 @@
        "[5 rows x 71 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +347,7 @@
        "30000   Aaron Armstrong    male_mountain biking   NaN"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +449,7 @@
        "84379             Abhinav    male  shooting sport    gold"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +551,7 @@
        "freq                  1   1032        166     668"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -645,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_10183/4089288788.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_95695/4089288788.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  event_medal_counts = olympics_tidy.groupby(['event', 'Medal']).size().unstack().sort_values(by=['gold', 'silver', 'bronze'], ascending=False)\n"
      ]
     },
@@ -698,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +720,7 @@
     "top_medalists_events = event_gender_counts.sum(axis=1).sort_values(ascending=False).head(10)\n",
     "\n",
     "# Select only the top 10 events from the original DataFrame\n",
-    "top_10_gender_counts = event_gender_counts.loc[top_10_gender_counts.index]\n",
+    "top_10_gender_counts = event_gender_counts.loc[top_medalists_events.index]\n",
     "\n",
     "# Plot side-by-side bar chart\n",
     "top_10_gender_counts.plot(kind='bar', figsize=(12,6), width=0.8, color =['hotpink','steelblue'] )\n",
@@ -797,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
