--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -796,18 +796,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Gender and event as index, medals as values\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m pivot_table_event\u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mpivot_table(olympics_tidy, values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedalist_name\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m                                     index\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mevent\u001b[39m\u001b[38;5;124m'\u001b[39m, columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMedal\u001b[39m\u001b[38;5;124m'\u001b[39m, aggfunc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcount\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Convert to percentages by summing medals across columns (axis=1) to get total medals per event,  \u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# then divide each medal count by its gevents total (axis=0) to normalize rows to 100%\u001b[39;00m\n\u001b[1;32m      7\u001b[0m pivot_table_event\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m((pivot_table_event\u001b[38;5;241m.\u001b[39mdiv(pivot_table_event\u001b[38;5;241m.\u001b[39msum(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Pivot Table (Percentage Medal Breakdown by Event(%)):\n",
+      "Medal                  gold  silver  bronze\n",
+      "event                                      \n",
+      "archery                25.0    35.0    40.0\n",
+      "artistic gymnastics    28.6    32.7    38.8\n",
+      "association football   33.9    33.0    33.0\n",
+      "athletics              31.3    35.5    33.1\n",
+      "badminton              31.8    36.4    31.8\n",
+      "baseball               33.3    33.3    33.3\n",
+      "basketball             32.4    33.8    33.8\n",
+      "beach volleyball       33.3    33.3    33.3\n",
+      "bmx                    33.3    33.3    33.3\n",
+      "boxing                 25.0    25.0    50.0\n",
+      "canoeing and kayaking  32.4    31.1    36.5\n",
+      "diving                 24.1    37.9    37.9\n",
+      "equestrian sport       28.9    34.2    36.8\n",
+      "fencing                33.3    38.9    27.8\n",
+      "field hockey           33.7    32.7    33.7\n",
+      "freestyle wrestling    25.0    25.0    50.0\n",
+      "greco-roman wrestling  25.9    25.9    48.1\n",
+      "handball               34.1    32.9    32.9\n",
+      "judo                   25.0    25.0    50.0\n",
+      "modern pentathlon      40.0    40.0    20.0\n",
+      "mountain biking        33.3    33.3    33.3\n",
+      "rhythmic gymnastics    33.3    33.3    33.3\n",
+      "road bicycle racing    27.3    36.4    36.4\n",
+      "rowing                 34.0    34.0    31.9\n",
+      "sailing                33.3    33.3    33.3\n",
+      "shooting sport         32.6    32.6    34.9\n",
+      "softball               33.3    33.3    33.3\n",
+      "swimming               31.2    34.4    34.4\n",
+      "synchronized swimming  31.0    31.0    37.9\n",
+      "table tennis           11.1    44.4    44.4\n",
+      "taekwondo              25.0    25.0    50.0\n",
+      "tennis                 33.3    33.3    33.3\n",
+      "track cycling          25.0    38.6    36.4\n",
+      "trampoline gymnastics  33.3    33.3    33.3\n",
+      "triathlon              33.3    33.3    33.3\n",
+      "volleyball             33.3    33.3    33.3\n",
+      "water polo             33.3    33.3    33.3\n",
+      "weightlifting          33.3    33.3    33.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8j/wsbxsgjj7rq076lxls5153nh0000gn/T/ipykernel_95695/549945129.py:2: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+      "  pivot_table_event= pd.pivot_table(olympics_tidy, values='medalist_name',\n"
      ]
     }
    ],
@@ -834,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -916,8 +961,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This table shows events where bronze medals make up 50% of the total medals awarded, while gold and silver each account for 25%. This pattern is common in combat sports because two bronze medals are awarded per event instead of one. This setup dates back to 1950 when the International Boxing Association (AIBA) eliminated the bronze medal match due to concerns over boxer safety, ensuring that both losing semifinalists receive bronze instead of competing in an additional fight. (https://www.nbcbayarea.com/paris-2024-summer-olympics/two-bronze-medals-explained-olympics/3617259/)"
+    "This table shows events where bronze medals make up 50% of the total medals awarded, while gold and silver each account for 25%. This pattern is common in combat sports because two bronze medals are awarded per event instead of one. This setup dates back to 1950 when the International Boxing Association (AIBA) eliminated the bronze medal match due to concerns over boxer safety, ensuring that both losing semifinalists receive bronze instead of competing in an additional fight (NBC Bay Area, 2024)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
