in class week 9 tuesday

--- a/Computing II/TidyData_Project/tidy_code.ipynb
+++ b/Computing II/TidyData_Project/tidy_code.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,27 +963,13 @@
    "source": [
     "This table shows events where bronze medals make up 50% of the total medals awarded, while gold and silver each account for 25%. This pattern is common in combat sports because two bronze medals are awarded per event instead of one. This setup dates back to 1950 when the International Boxing Association (AIBA) eliminated the bronze medal match due to concerns over boxer safety, ensuring that both losing semifinalists receive bronze instead of competing in an additional fight (NBC Bay Area, 2024)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -999,5 +985,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
